2014-10-28  Erik Hetzner <egh@e6h.org>

	* apel-pkg.el: New file.

2014-10-19  Erik Hetzner <egh@e6h.org>
	* pces-20.el: Only check for broken insert-file-contents-literally
	when literal-test-file is writable.

2014-06-05  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-20.el (detect-mime-charset-from-coding-system): (Emacs23 and
	later) New cutomizable variable and function.
	(detect-mime-charset-region, detect-mime-charset-string): (Emacs23
	and later) Use it.  When `detect-mime-charset-from-coding-system'
	is non-nil, detect MIME charset by encodability in destination
	coding system.

2014-06-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-20.el (detect-mime-charset-list): (Emacs23 and later) New
	function.
	(detect-mime-charset-string, detect-mime-charset-region): (Emacs23
	and later) Refactored to build a list of unique characters without
	full list of characters in string or region.  Use
	detect-mime-charset-list.

2014-06-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-e20.el (mime-charset-list): Fix the case that MIME charset
	and coding system have n:1 relation.

	* mcs-xm.el (mime-charset-list): Likewise.

2014-06-03  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-e20.el (coding-system-to-mime-charset): Check
	coding-system-to-mime-charset-exclude-regexp is non-nil.

2014-06-01  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-e20.el (coding-system-to-mime-charset-exclude-regexp): New
	variable.
	(coding-system-to-mime-charset): Exclude non-standard charset from
	result.
	Cf. https://github.com/wanderlust/wanderlust/issues/61

2014-05-27  Juliusz Chroboczek  <jch@pps.univ-paris-diderot.fr>

	* mcs-e20.el (charsets-mime-charset-alist): Prefer iso-8859-15 to
	iso-8859-6 and so on.
	Cf. https://github.com/wanderlust/wanderlust/issues/56

	* mcs-xm.el (charsets-mime-charset-alist): Likewise.

2014-03-15  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* install.el (install-prefix): Minor refactoring.

2014-03-13  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
